# te-cli

./: .gitignore  pyproject.toml
te/cli/: cli_utility.py  core.py  entry.py
te/interface/: common.py  guide.py  touch_encoder.py
te/interface/hid/: hid_guide.py  hid_reports.py  hid_te.py  hid_te_statics.py
te/interface/hid/comm_interface/: hid_interface.py  hid_interface_win.py
te/interface/hid/utils/: hot_plug_utility.py
te/interface/j1939/: j1939_guide.py  j1939_messages.py  j1939_te.py  j1939_te_statics.py
te/interface/j1939/comm_interface/: __init__.py  j1939_ca.py  j1939_ca_linux.py  j1939_ca_universal.py
te/utils/: discovery_tool.py  hid_utility.py  j1939_utility.py
